--- a/WeatherConcurrencyApp/WeatherConcurrencyApp.Presentation.csproj
+++ b/WeatherConcurrencyApp/WeatherConcurrencyApp.Presentation.csproj
@@ -64,6 +64,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserControl1.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControl1.Designer.cs">
+      <DependentUpon>UserControl1.cs</DependentUpon>
+    </Compile>
     <Compile Include="WeatherPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -86,6 +92,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UserControl1.resx">
+      <DependentUpon>UserControl1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="WeatherPanel.resx">
       <DependentUpon>WeatherPanel.cs</DependentUpon>
     </EmbeddedResource>
@@ -102,6 +111,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\WeatherConcurrencyApp.Common\WeatherConcurrencyApp.Common.csproj">
+      <Project>{61013604-D307-4252-957F-31766ADC0991}</Project>
+      <Name>WeatherConcurrencyApp.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\WeatherConcurrencyApp.Infrastructure\WeatherConcurrencyApp.Infrastructure.csproj">
       <Project>{16242FEC-3905-4939-86FC-578FA12C1899}</Project>
       <Name>WeatherConcurrencyApp.Infrastructure</Name>
