--- a/WeatherConcurrencyApp/app.config
+++ b/WeatherConcurrencyApp/app.config
@@ -4,8 +4,11 @@
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
 	</startup>
 	<appSettings>
-		<add key="Token" value="fccfa232f62a053112be616c8ebac24e"/>
-		<add key="ApiUrl" value="https://api.openweathermap.org/data/2.5/weather?q="/>
+		<add key="Token" value="a2fe9eef8b4489336e87394792a3f2de"/>
+		<add key="ApiUrl" value="http://api.openweathermap.org/data/2.5/onecall/timemachine?"/>
+		<add key="ApiUrlGeo" value="http://api.openweathermap.org/geo/1.0/direct?q="/>
 		<add key="Units" value="metric"/>
+		<add key="ApiIcon" value="https://openweathermap.org/img/w/"/>
+		
 	</appSettings>
 </configuration>
